kyy-k8s-config/src/staging/backend/chatbot-server/chatbot-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: chatbot-server
  name: chatbot-server
spec:
  ports:
    - name: "5000"
      port: 5000
      targetPort: 5000
  selector:
    app: chatbot-server
